# mailchimp-list-janitor

./: Cargo.toml
lambda/src/: main.rs
mailchimp-list-janitor/: Cargo.toml
mailchimp-list-janitor-cli/: Cargo.toml
mailchimp-list-janitor-cli/src/: main.rs
mailchimp-list-janitor/src/: client.rs  error.rs  lib.rs  models.rs
mock/: mock-data.json  server.js
src/: client.rs  error.rs  main.rs  models.rs
