[package]
name = "mailchimp-list-janitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "rustls-tls",
  "http2",
] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
async-gen = "0.2.3"
futures-core = "0.3.30"
futures-util = "0.3.30"
thiserror = "1.0.58"
