[package]
name = "mailchimp-list-janitor-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
anyhow = "1.0.81"
mailchimp-list-janitor = { path = "../mailchimp-list-janitor" }
clap = { version = "4.5.4", features = ["derive", "env"] }
